--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>anshs-portfolio</title>
     <meta name="description" content="Ansh Grover's personal portfolio website." />
     <meta name="author" content="Ansh Grover" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <meta property="og:title" content="anshs-portfolio" />
     <meta property="og:description" content="Ansh Grover's personal portfolio website." />
     <meta property="og:type" content="website" />
-    <!-- You can update the og:image to your own image if desired -->
-    <!-- <meta property="og:image" content="/avatar.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <!-- <meta name="twitter:image" content="/avatar.png" /> -->
   </head>
 
   <body>
