add opengraph tags (#26)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       content="Ansh Grover's personal portfolio website."
     />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://anshgrover.me/" />
+    <meta property="og:image" content="/avatar.jpeg" />
+    <meta property="og:logo" content="/avatar.jpeg" />
+
 
     <meta name="twitter:card" content="summary_large_image" />
   </head>
